--- a/OpenCase_Beta/css/chat.css
+++ b/OpenCase_Beta/css/chat.css
@@ -12,6 +12,8 @@ input, .input-text {
     width: 200px;
     margin: 0 auto;
     text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -20,12 +22,16 @@ input, .input-text {
     margin: 0px 3px;
 }
 #login__buttons {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     flex-direction: column;
 }
 #login-buttons-container {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-around;
     align-items: stretch;
@@ -43,6 +49,8 @@ input, .input-text {
     padding: 5px !important;
 }
 .chat__rooms {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -50,6 +58,8 @@ input, .input-text {
     flex-wrap: wrap;
 }
 .chat__rooms__room {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,6 +87,8 @@ ul.chat__messages {
 }
 li.chat__message {
     margin: 15px 0;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -171,6 +183,8 @@ li.chat__message a img[data-userid] {
 }
 
 .message__moderator {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     position: absolute;
     right: -16px;
@@ -186,6 +200,8 @@ li.chat__message a img[data-userid] {
 }
 
 .chat__write {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
     flex-direction: row;
     align-items: stretch;
