--- a/OpenCase_Beta/css/profile.css
+++ b/OpenCase_Beta/css/profile.css
@@ -612,6 +612,17 @@ ul.posts__user-posts {
     color: #000 !important;
 }
 
+.user_uid {
+  color: #eaeaea;
+  font-size: 0.8em;
+  position: fixed;
+  bottom: 5px;
+  left: 5px;
+}
+.user_uid:before {
+  content: 'ID: ';
+}
+
 /* == VIP === */
 .vip .blured_img {
     display: none;
