--- a/OpenCase_Beta/css/odometer-theme-default.css
+++ b/OpenCase_Beta/css/odometer-theme-default.css
@@ -62,6 +62,13 @@
   -o-transition: -o-transform 0.3s;
   transition: transform 0.3s;
 }
+.odometer.time-2000.odometer-auto-theme.odometer-animating-up .odometer-ribbon-inner, .odometer.time-2000.odometer-theme-default.odometer-animating-up .odometer-ribbon-inner {
+  -webkit-transition: -webkit-transform 2s;
+  -moz-transition: -moz-transform 2s;
+  -ms-transition: -ms-transform 2s;
+  -o-transition: -o-transform 2s;
+  transition: transform 2s;
+}
 .odometer.odometer-auto-theme.odometer-animating-up.odometer-animating .odometer-ribbon-inner, .odometer.odometer-theme-default.odometer-animating-up.odometer-animating .odometer-ribbon-inner {
   -webkit-transform: translateY(-100%);
   -moz-transform: translateY(-100%);
