--- a/OpenCase_Beta/css/main.css
+++ b/OpenCase_Beta/css/main.css
@@ -19,12 +19,12 @@ body {
     -webkit-transform: translate(270px, -10px);
             transform: translate(270px, -10px);
 }
-.cases {
+.cases, .capsules {
     text-align: center;
     /*background: url(../images/bg2.png);*/
     padding-left: 5px;
 }
-.case {
+.case, .capsule {
     display: inline-block;
 	margin: 15px 6px;
 	width: 125px;
@@ -35,7 +35,7 @@ body {
     box-shadow: 0px 0px 7px #000;
     position: relative;
 }
-.case .countdown {
+.case .countdown, .capsule .countdown {
     position: absolute;
     background: rgba(255, 255, 255, 0.2);
     padding: 4px 0;
@@ -73,13 +73,13 @@ body {
     width: 105px;
 	box-shadow: 0 -1px 2px rgba(50, 50, 50, 0.52);
 }
-.case img {
+.case img, .capsule img {
     max-width: 115px;
 	height: 83px;
     padding: 5px;
     padding-bottom: 10px;
 }
-.cases h1 {
+.cases h1, .capsules h1 {
     color: #fff;
     font-family: LatoRegular;
     font-size: 1.4em;
@@ -423,9 +423,6 @@ button#what-i-can-win-Button {
     font-size: 15px;
     font-family: sans-serif;
 }
-.hide {
-	display: none;
-}
 #opened-text, #opened {
 	color:#fff;
 	font-family: LatoRegular;
@@ -546,8 +543,8 @@ i.double-icon {
     top: -2px;
 }
 
-.input-text, input[type="text"], input[type="password"] {
-    background: rgba(0,0,0, 0.5);
+.input-text /*input[type="text"], input[type="password"]*/ {
+     background: rgba(0,0,0, 0.5);
     border: none;
     border-bottom: 1px solid #00ACEF;
     box-shadow: 0 0 3px #000 inset;
@@ -558,12 +555,19 @@ i.double-icon {
     margin-bottom: 5px;
 }
 
-.input-text.light, input[type="text"].light, input[type="password"].light {
+.input-text.light /*input[type="text"].light, input[type="password"].light*/ {
     background:rgba(255,255,255, 0.8);
     color: #000 !important;
 }
-.input-text:focus, input[type="text"]:focus, input[type="password"]:focus {
+.input-text:focus /*input[type="text"]:focus, input[type="password"]:focus*/ {
   color:#fff;
+}
+
+.mb-5 {
+    margin-bottom: 5px;
+}
+.modal-dialog {
+    z-index: 1050;
 }
 
 a[href*='vk.com']:after {
@@ -582,6 +586,10 @@ a[href*='vk.com'] {
     display: inline-flex;
     align-items: center;
     align-content: center;
+}
+
+.hide {
+	display: none !important;
 }
 
 /* === Currency === */
