--- a/OpenCase_Beta/css/crash.css
+++ b/OpenCase_Beta/css/crash.css
@@ -1,3 +1,6 @@
+body {
+    background: #19212b !important;
+}
 .crash__multiply.crashed {
     color: red;
 }
@@ -7,166 +10,39 @@
 }
 #crash-container {
     text-align: center;
-    color:lightcyan;
+    color: lightcyan;
     font-size: 3em;
     height: 2.5em;
     display: flex;
     justify-content: center;
     flex-direction: column;
     flex-shrink: 0;
+    position: relative;
 }
 
 .crash__next-round-timer {
-    color:lightgray;
+    color: lightgray;
     font-size: 0.5em;
     position: absolute;
     width: 100%;
     background: RGBA(0, 0, 0, 0.85);
-    padding: 30px 0;
     z-index: 50;
-    margin-top: 0px;
-}
-.bets {
-    height: 35px;
-    white-space: nowrap;
-    overflow-x: auto;
-    margin-right: 9px;
-    margin-left: 9px;
-    text-align: center;
-	margin-top: 6px;
-    flex-shrink: 0;
-}
-.bets > span {
-    margin-left: 0px;
-    padding: 8px 10px;
-    background: #e7e7e7;
-    color: #3F3F3F;
-    display: inline-block;
-    border-right: 1px solid #303030;
-    border-top: 1px solid #303030;
-    font-size: 0.9em;
-	cursor: pointer;
-}
-#bet {
-    width: calc(100% - 26px);
-    text-align: center;
-    height: 37px;
-    font-size: 1em;
-    margin: 5px 8px;
-    flex-shrink: 0;
-}
-#place-bet {
-    background:#049600;
-    color: #fff;
-    font-size: 1.2em;
-    font-weight: bold;
-    border: none;
-    outline: none;
-    width: calc(100% - 10px);
-    border-radius: 6px;
-    border-bottom: 4px solid #0B5700;
-    margin: 5px;
-    min-height: 80px;
-}
-#place-bet:disabled {
-    opacity: 0.5;
-}
-
-.bet-list, .top {
-    width:calc(100% - 10px);
-    margin: 5px;
-    color: #fff;
-    border-collapse: collapse;
-}
-.bet-list th, .top th {
-    text-align: left;
-    background: rgba(237, 237, 237, 0.3);
-    padding: 4px;
-    text-transform: uppercase;
-    font-size: 0.8em;
-}
-tr.cashOut, .cashOut-color {
-    color: #14d400;
-}
-tr.crashed, .crashed-color {
-    color: red;
-}
-
-#balance-text {
-    margin-left:5px;
-}
-
-#container {
-    color:#fff;
+    top: 0;
+    left: 0;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    height: calc(100% - 40px);
+    align-items: center;
+    justify-content: center;
 }
-
-.crash__multiply {
-    margin: auto;
-}
-
-.history {
-    list-style: none;
-    padding: 0px;
+#odometer_next_round {
     margin: 0 5px;
 }
-.history li {
-    padding: 5px;
-    
+.bets {
+    display: -webkit-box;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
 }
-.history li:nth-child(2n) {
-    background: rgba(255,255,255,0.1)
-}
-
-
-.tabs {
-  min-width: 320px;
-  padding: 0px;
-  margin: 0 5px;
-  flex-grow: 1;
-  flex-shrink: 1;
-  overflow: auto;
-}
-
-section {
-    display: none;
-    padding: 15px;
-    background: #151515;
-    border:1px solid #787878;
-    padding-bottom: 20px;
-}
-.tabs input {
-    display: none;
-}
-.tabs label {
-    display: inline-block;
-    margin: 0 0 -1px;
-    padding: 15px 25px;
-    font-weight: 600;
-    text-align: center;
-    border: 1px solid #787878;
-    background: #202020;
-    color:#aaa;
-    border-radius: 3px 3px 0 0;
-}
-.tabs label:hover {
-    color: #888;
-    cursor: pointer;
-}
-.tabs input:checked + label {
-    color:#fff;
-    border: 1px solid #787878;
-    border-top: 1px solid #009933;
-    border-bottom: 1px solid #151515;
-    background: #151515;
-}
-#tab1:checked ~ #bets,
-#tab2:checked ~ #history,
-#tab3:checked ~ #top {
-    display: block;
-}
-.top_3 td:nth-child(1) {
-    color: gold;
+#bet {
+    text-align: right;
 }
