--- a/OpenCase_Beta/css/online-games.css
+++ b/OpenCase_Beta/css/online-games.css
@@ -16,17 +16,19 @@
     height: 10px;
 }
 
-.chat__message__message {
+.chat-panel .panel-body {
+    padding: 3px 0 0 10px;
+}
+.chat__messages {
+    padding: 0;
+    list-style: none;
+    margin: 0;
+    overflow: auto;
+    height: 100px;
+}
+.chat__messages li {
     margin: 5px 0;
     word-break: break-all;
-}
-
-.chat__messages {
-    padding: 10px;
-    list-style: none;
-    margin-top: 0;
-    overflow: auto;
-    height: 80px;
 }
 
 .chat {
@@ -42,53 +44,6 @@
     -webkit-transition: 0.5s;
     transition: 0.5s;
 }
-
-.chat__message__message.info {
-    color:lightsteelblue;
-}
-
-.chat__message__message.warning {
-    color:lightcoral;
-}
-
-.message__name {
-    color:antiquewhite
-}
-
-.chat__new-message {
-    display: flex;
-    align-items:center;
-    margin-bottom: 5px;
-}
-
-.chat__new-message__textbox {
-    flex-grow: 2;
-    margin: 0 5px;
-    height: auto;
-    min-height: 1.5em;
-    word-break: break-all;
-}
-
-.chat__toggle {
-    position: absolute;
-    top:-21px;
-    height: 16px;
-    width:100px;
-    text-align: center;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    padding: 2px;
-    background: #000;
-    border-radius: 8px 8px 0 0;
-    border: 1px solid #fff;
-    border-bottom: 0;
-    cursor: pointer;
-}
-
-.chat.closed {
-    max-height: 0;
-}
-.chat.opened {
-    max-height: 150px;
+.chat-panel {
+    margin-bottom: 0;
 }
