--- a/OpenCase_Beta/css/online-games.css
+++ b/OpenCase_Beta/css/online-games.css
@@ -30,7 +30,9 @@
     margin: 5px 0;
     word-break: break-all;
 }
-
+.chat-bar {
+    z-index: 10;
+}
 .chat {
     position: fixed;
     bottom:0;
