--- a/OpenCase_Beta/css/coinflip.css
+++ b/OpenCase_Beta/css/coinflip.css
@@ -1,20 +1,20 @@
-﻿html, body {
+html, body {
 margin: 0;
 width: 100%;
 height: 100%;
 background-color: #333;
 }
-.container {
+#container {
 	overflow-x:hidden;
-	font-family: Lato;
+	background: #19212b;
 }
 @media(max-width:390px) {
-	.container {
+	#container {
 		font-size:80%;
 	}
 }
 @media(min-width:600px) {
-	.container {
+	#container {
 		font-size:120%;
 	}
 }
@@ -44,7 +44,6 @@ background-color: #333;
     border-radius: 2px;
     text-transform: uppercase;
     font-size: 0.9em;
-    font-family: Lato;
 	cursor: pointer;
 	font-weight: bold;
 }
@@ -74,7 +73,7 @@ ul.bot-inventory {
     background: rgba(0, 0, 0, 0.7);
 }
 .game {
-    background: rgb(41, 41, 41);
+    background: #181818;
     position: fixed;
     top: 40px;
     /*width: 100%;*/
@@ -111,7 +110,6 @@ ul.bot-inventory {
     width: 100%;
     display: inline-block;
 	text-align: center;
-    font-family: Lato;
 }
 .game__bot__nick, .game__player__nick {
     display: block;
@@ -133,7 +131,6 @@ ul.bot-inventory {
 }
 .game__start {
     color: #fff;
-    font-family: Lato;
     text-align: center;
 }
 .game__start__button:before, .game__start__button:after {
@@ -169,11 +166,13 @@ ul.bot-inventory {
     width: 50%;
     vertical-align: top;
 }
+.inventory-tables-holder > tbody > tr > td:first-child {
+    border-right: 10px solid #181818;
+}
 .bot-inventory, .player-inventory {
     color: #fff;
     text-align: left;
     border-collapse: collapse;
-    font-family: Lato;
 	font-size: 0.85em;
 	width: 100%;
 }
@@ -190,7 +189,7 @@ ul.bot-inventory {
 .bot-inventory td, .player-inventory td {
 	padding: 4px 10px;
     line-height: 1.3em;
-    border-bottom: 6px solid rgb(41, 41, 41);
+    border-bottom: 6px solid #181818;
 }
 .inv_rarity {
     padding: 2px !important;
