--- a/OpenCase_Beta/css/marketplace.css
+++ b/OpenCase_Beta/css/marketplace.css
@@ -6,68 +6,25 @@
 	margin-top:25px;
 }
 #search {
-    width: auto;
-    padding: 4px;
-}
-#search_text {
-    padding: 10px 0 10px 10px;
-    font-size: 16px;
-    font-family: Lato, sans-serif;
-    font-weight: bold;
-    height: 31px;
-    margin-right: 0;
-    color: white;
-    outline: none;
-    background: #121212;
-    transition: all 0.15s;
-    width: 100%;
+    margin: 5px 0;
 }
 #buy_count {
-    width: 30px;
+    width: 50px;
     text-align: center;
+    display: inline-block;
+    margin: 0 5px;
 }
-::-webkit-input-placeholder { /* WebKit browsers */
-    color: white;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color: white;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color: white;
-}
-:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color: white;
-}
-#search_text:focus {
-    background: rgb(64, 151, 119);
-}
-#search_button {
-    border: 0 none;
-    background: #1f7f5c;
-    width: 60px;
-    padding: 0;
-    text-align: center;
-    height: 52px;
-    cursor: pointer;
-    color: #fff;
-    line-height: 49px;
-    font-size: 22px;
-    position: absolute;
-    top: 44px;
-    right: 0;
-}
-#search_result {
-    margin: 0 auto;
-    width: 100%;
+.search-result-table {
     max-width: 650px;
+    width: 100%;
     border-collapse: collapse;
-	table-layout: fixed;
+    table-layout: fixed;
+    margin: 0 auto;
 }
 .item {
     background: RGBA(0, 0, 0, 0.26);
     color: #fff;
     overflow: hidden;
-    font-family: Lato;
     font-weight: 400;
 	border-bottom: 8px solid #19212B;
 	cursor: pointer;
@@ -164,13 +121,12 @@ i.double-icon {
     margin: 8px;
     text-align: center;
     padding: 20px;
-    font-family: Lato;
     display: inline-block;
     box-shadow: 0 0 3px RGBA(0, 0, 0, 0.4);
     cursor: pointer;
     position: relative;
-    width: 150px;
-    height: 175px;
+    width: 190px;
+    height: 215px;
 }
 .sales-discount {
     position: absolute;
