--- a/OpenCase_Beta/css/profile.css
+++ b/OpenCase_Beta/css/profile.css
@@ -36,7 +36,7 @@ body {
     align-items: center;
     justify-content: space-around;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    padding-top: 80px;
+    padding-top: 90px;
 }
 
 .top__pm > *,
@@ -409,6 +409,8 @@ ul.posts__user-posts {
 }
 .checkbox-trade-ready input {
     vertical-align: middle;
+    margin: 0;
+    margin-right: 3px;
 }
 .other-player-ready {
     position: absolute;
@@ -417,7 +419,6 @@ ul.posts__user-posts {
     font-size: 0.75em;
     color: #a2a2a2;
 }
-
 
 /* === My Trades === */
 
@@ -555,6 +556,10 @@ ul.posts__user-posts {
 .tradeWith__nickname {
     font-weight: bold;
     font-size: 0.8em;
+    max-width: 180px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .tradeWith__tradeCount {
     color: #3E3E3E;
@@ -564,11 +569,13 @@ ul.posts__user-posts {
     margin-left: auto;
     margin-bottom: auto;
     color: #838383;
-    display: none;
 }
 .tradeWith__controls > * {
     cursor: pointer;
     padding: 5px;
+}
+.delete-trade:hover {
+    color: #cb1212;
 }
 
 .trade__weapons__chang-your-weapons {
