--- a/OpenCase_Beta/css/rps.css
+++ b/OpenCase_Beta/css/rps.css
@@ -1,33 +1,29 @@
-﻿body {
+body {
 	padding-bottom: 0;
 	width: 100%;
 	height: 100%;
 }
 .container {
     padding-top: 50px;
-		width: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     overflow-x: hidden;
-		height: calc(100% - 50px);
+    height: calc(100% - 50px);
     background-size: cover;
 }
 .battle-field {
-    background: #323f52;
     text-align: center;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
-    padding-top: 5px;
-    padding-bottom: 10px;
     white-space: nowrap;
     overflow: hidden;
-    width: 500px;
-    margin: 0 auto;
-    position: absolute;
+    max-width: 500px;
     z-index: 1;
-    left: 50%;
-    transform: translate(-50%);
-	-webkit-transform: translate(-50%);
+    margin: 0 auto;
+    margin-top: 10px;
+}
+.battle-field .panel-footer {
+    padding: 0;
 }
 .round-count {
     color: #fff;
@@ -35,7 +31,9 @@
     font-size: 2em;
 }
 .battle-field .hand {
-    width: 200px;
+    width: 50%;
+    height: auto;
+    padding: 0 10px;
 }
 .rock {
 	background: url(../images/rps/rock.png);
@@ -53,7 +51,6 @@
     width: 100px;
     height: 100px;
     display: inline-block;
-	margin: 0 15px;
 	transform: translate3d(0, 0, 0);
 }
 .choice__hand .hand {
@@ -72,38 +69,42 @@
     text-align: left;
 }
 .right img {
-    transform: scaleX(-1);
 	-webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
+.your-score {
+    border-right: 1px solid rgba(255,255,255, 0.3);
+}
+.your-score, .comp-score {
+    display: inline-block;
+    width: 50%;
+    text-transform: uppercase;
+    color: rgb(255, 255, 255);
+    font-size: 11px;
+    padding: 5px;
+}
+.battle-field .panel-footer strong {
+    display: block;
+    font-size: 16px;
 }
 .status {
     color: #fff;
     text-align: center;
-    font-family: Lato;
 }
 .count {
     text-align: center;
     white-space: nowrap;
-    font-family: Lato;
     margin-top: 176px;
 }
-.count div {
+.your-score, .comp-score {
     display: inline-block;
+    width: 50%;
     color: #fff;
-    background: #ff7777;
-    padding: 4px 20px;
-    border-radius: 0 0 10px 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
-	width: 120px;
-}
-.count div span {
-    background: rgba(0, 0, 0, 0.35);
-    padding: 3px 5px;
-    font-weight: bold;
-    border-radius: 3px;
 }
 .choice {
     text-align: center;
-    margin-top: 15px;
+    max-width: 500px;
+    margin: 15px auto;
 }
 .choice span {
 	display: block;
@@ -132,18 +133,17 @@
     background: #e0e0e0;
     color: #000;
 }
-ul.winItems {
+.winItems ul {
     list-style: none;
     padding-left: 0;
     color: #fff;
-    font-family: Lato;
 }
-ul.winItems li {
+.winItems ul li {
     border-bottom: 1px solid #000;
     background: #2d2d2d;
     padding: 6px 5px 6px 10px;
 }
-ul.winItems li b {
+.winItems ul li b {
     font-weight: normal;
     display: block;
     height: 5px;
