--- a/OpenCase_Beta/css/main.css
+++ b/OpenCase_Beta/css/main.css
@@ -34,6 +34,7 @@ body {
 	background: linear-gradient(to top, #A8A8A8, #474747);
     box-shadow: 0px 0px 7px #000;
     position: relative;
+    box-sizing: content-box;
 }
 .case .countdown, .capsule .countdown {
     position: absolute;
@@ -72,12 +73,14 @@ body {
     line-height: 1.2em;
     width: 105px;
 	box-shadow: 0 -1px 2px rgba(50, 50, 50, 0.52);
+    box-sizing: content-box;
 }
 .case img, .capsule img {
     max-width: 115px;
 	height: 83px;
     padding: 5px;
     padding-bottom: 10px;
+    box-sizing: content-box;
 }
 .cases h1, .capsules h1 {
     color: #fff;
